# detector2d

detector2d_node/src/: detector2d_node.cpp
detector2d_param/src/: detector2d_parameters.yaml
detector2d_plugins/: CMakeLists.txt  detector2d_plugins.xml  package.xml
detector2d_plugins/include/detector2d_plugins/: publish_detected_img.hpp
detector2d_plugins/src/: publish_detected_img.cpp
detector2d_plugins/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
detector2d_plugins/src/install/yolox_cpp/share/yolox_cpp/: package.bash  package.zsh
detector2d_plugins/src/log/: latest_build
